tests/ok/generic-adt-surface.ari
enum Option[T] {
  None,
  Some(T),
}

fn main() -> i64 {
  return 0;
}
