tests/errors/vector-impl-runtime-abi.ari
impl Iterable[i64] for Vec[i64] {
}

fn main() -> i64 {
  return 0;
}
